@startuml db_schema_user
!theme plain
hide circle
skinparam linetype ortho
skinparam defaultFontName monospaced

entity "users" as users {
  * id : BIGINT <<PK>>
  --
  * email : VARCHAR(255) <<UNIQUE>>
  created_at : TIMESTAMPTZ
  * role : VARCHAR(50) [USER | ADMIN]
  * provider : VARCHAR(50) [LOCAL | GOOGLE]
}

entity "user_library" as user_library {
  * user_id : BIGINT <<PK, FK>>
  * song_id : BIGINT <<PK, FK>>
  --
  * liked : BOOLEAN
  * play_count : BIGINT
  * total_play_duration_seconds : BIGINT
  last_played : TIMESTAMPTZ
  added_at : TIMESTAMPTZ
  is_downloaded_locally : BOOLEAN
  * last_updated : TIMESTAMPTZ
  * is_deleted : BOOLEAN
}

entity "user_playback_state" as user_playback_state {
  * user_id : BIGINT <<PK, FK>>
  --
  * position_seconds : BIGINT
  * shuffle : BOOLEAN
  * repeat : BOOLEAN
  * auto_play : BOOLEAN
  * auto_play_recommendations_page : BIGINT
  * updated_at : TIMESTAMPTZ
}

entity "playlists" as playlists {
  * id : BIGINT <<PK>>
  --
  * user_id : BIGINT <<FK>>
  * name : VARCHAR(255)
  * playlist_type : VARCHAR(50) [STREAMABLE | USER_UPLOAD]
  cover_image : TEXT
  * indestructible : BOOLEAN
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
}

entity "playlist_songs" as playlist_songs {
  * playlist_id : BIGINT <<PK, FK>>
  * position : INT <<PK>>
  --
  * song_file_hash : VARCHAR(64) <<FK -> songs.file_hash>>
}

entity "songs" as songs <<external>> {
  id : BIGINT
  file_hash : VARCHAR(64)
}

users ||--o{ user_library
songs ||-up-o{ user_library

users ||--|| user_playback_state

users     ||--o{ playlists
playlists ||--o{ playlist_songs
songs     ||-right-o{ playlist_songs : "file_hash"

@enduml
